discussion/kv_engine/184675/184675_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Add setHistoryRetentionBytes to KVStore

Implemented only in magma-kvstore.cc and calls through to
SetHistoryRetentionBytes

Change-Id: I597f444add833c77180ae4bb07ce7ee94a788530

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-16 16:15:21.000000000
Message: 
Uploaded patch set 5: New patch set was added with same tree, parent, and commit message as Patch Set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-16 16:15:46.000000000
Message: 
Patch Set 5: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/332672/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-16 16:44:41.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/824/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/824/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2884:18:
error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/824/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1002/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-memory-tracking-proxy.h(53): error C2061: syntax error: identifier "Mode" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1002/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/795/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/795/ )

CMake error: CMakeLists.txt:145 (MESSAGE) ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/795/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1111/ : FAILURE

Compile error at [2023-01-16T16:17:58.022Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1111/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/829/ : FAILURE

Compile error at [2023-01-16T16:19:38.122Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/829/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/815/ : FAILURE

Compile error at [2023-01-16T16:43:05.446Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/815/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/843/ : FAILURE

Compile error at [2023-01-16T16:35:58.769Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/843/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/834/ : FAILURE

Compile error at [2023-01-16T16:38:09.574Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: ?Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/834/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/844/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [145/160]: test_MB-19687_fixed...Missing stat:  ep_magma_value_separation_size from stat group 
[2023-01-16T16:32:08.464Z] Missing stat:  ep_magma_value_separation_size from stat group config
[2023-01-16T16:32:08.464Z] ../kv_engine/engines/ep/tests/ep_testsuite.cc:7880 Test failed: `stats error" (missing stats)
[2023-01-16T16:32:08.464Z] (27 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/844/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/835/ : FAILURE

Compile error at [2023-01-16T16:28:17.327Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30:
error: unknown type name "Mode"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/835/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22204/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
